--- a/tests/cassettes/test_carrier_account_update.yaml
+++ b/tests/cassettes/test_carrier_account_update.yaml
@@ -15,22 +15,22 @@ interactions:
       Content-Type:
       - application/json
       authorization:
-      - REDACTED
+      - <REDACTED>
       user-agent:
-      - REDACTED
+      - <REDACTED>
       x-client-user-agent:
-      - REDACTED
+      - <REDACTED>
     method: POST
     uri: https://api.easypost.com/v2/carrier_accounts
   response:
     body:
-      string: '{"id": "ca_4f68e148295c455db9e9499df078b062", "object": "CarrierAccount",
-        "type": "UpsAccount", "clone": false, "created_at": "2022-05-10T23:40:59Z",
-        "updated_at": "2022-05-10T23:40:59Z", "description": "UPS Account", "reference":
+      string: '{"id": "ca_a61e2208f02e43da81813b743e1beac8", "object": "CarrierAccount",
+        "type": "UpsAccount", "clone": false, "created_at": "2022-05-27T18:52:42Z",
+        "updated_at": "2022-05-27T18:52:42Z", "description": "UPS Account", "reference":
         null, "billing_type": "carrier", "readable": "UPS", "logo": null, "fields":
         {"credentials": {"account_number": {"visibility": "readonly", "label": "UPS
-        Account Number", "value": "A1A1A1"}}}, "credentials": ["REDACTED"], "test_credentials":
-        ["REDACTED"]}'
+        Account Number", "value": "A1A1A1"}}}, "credentials": "<REDACTED>", "test_credentials":
+        "<REDACTED>"}'
     headers:
       cache-control:
       - no-cache, no-store
@@ -39,7 +39,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"da739d1b52eab6a046a8b8a47daa4f47"
+      - W/"2342af2fc0314d72e7bf27c39ede8843"
       expires:
       - '0'
       pragma:
@@ -57,21 +57,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 9f1b0cfb627af80befb5a35800325244
+      - 92f9584062911dfaef9b192a0002d4aa
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb1nuq
+      - bigweb3nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb2nuq fde591f008
-      - intlb2wdc fde591f008
-      - extlb3wdc c51cdb8bf2
+      - intlb2nuq 570dfcbc0a
+      - extlb2nuq fc4d5d217f
       x-runtime:
-      - '0.113884'
+      - '0.129227'
       x-version-label:
-      - easypost-202205100008-b4df6b5700-master
+      - easypost-202205262146-0562c799aa-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -91,22 +90,22 @@ interactions:
       Content-Type:
       - application/json
       authorization:
-      - REDACTED
+      - <REDACTED>
       user-agent:
-      - REDACTED
+      - <REDACTED>
       x-client-user-agent:
-      - REDACTED
-    method: PUT
-    uri: https://api.easypost.com/v2/carrier_accounts/ca_4f68e148295c455db9e9499df078b062
+      - <REDACTED>
+    method: PATCH
+    uri: https://api.easypost.com/v2/carrier_accounts/ca_a61e2208f02e43da81813b743e1beac8
   response:
     body:
-      string: '{"id": "ca_4f68e148295c455db9e9499df078b062", "object": "CarrierAccount",
-        "type": "UpsAccount", "clone": false, "created_at": "2022-05-10T23:40:59Z",
-        "updated_at": "2022-05-10T23:41:00Z", "description": "My custom description",
+      string: '{"id": "ca_a61e2208f02e43da81813b743e1beac8", "object": "CarrierAccount",
+        "type": "UpsAccount", "clone": false, "created_at": "2022-05-27T18:52:42Z",
+        "updated_at": "2022-05-27T18:52:43Z", "description": "My custom description",
         "reference": null, "billing_type": "carrier", "readable": "UPS", "logo": null,
         "fields": {"credentials": {"account_number": {"visibility": "readonly", "label":
-        "UPS Account Number", "value": "A1A1A1"}}}, "credentials": ["REDACTED"], "test_credentials":
-        ["REDACTED"]}'
+        "UPS Account Number", "value": "A1A1A1"}}}, "credentials": "<REDACTED>", "test_credentials":
+        "<REDACTED>"}'
     headers:
       cache-control:
       - no-cache, no-store
@@ -115,7 +114,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"27b77530c02702f26b66b9e6b5cab2cd"
+      - W/"42b134350fd5b3c13b598411ee2c2f78"
       expires:
       - '0'
       pragma:
@@ -133,21 +132,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 9f1b0cfb627af80befb5a3580032525f
+      - 92f9584062911dfbef9b192a0002d4bb
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb8nuq
+      - bigweb3nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq fde591f008
-      - intlb1wdc fde591f008
-      - extlb3wdc c51cdb8bf2
+      - intlb1nuq 570dfcbc0a
+      - extlb2nuq fc4d5d217f
       x-runtime:
-      - '0.123968'
+      - '0.130136'
       x-version-label:
-      - easypost-202205100008-b4df6b5700-master
+      - easypost-202205262146-0562c799aa-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -165,13 +163,13 @@ interactions:
       Content-Length:
       - '0'
       authorization:
-      - REDACTED
+      - <REDACTED>
       user-agent:
-      - REDACTED
+      - <REDACTED>
       x-client-user-agent:
-      - REDACTED
+      - <REDACTED>
     method: DELETE
-    uri: https://api.easypost.com/v2/carrier_accounts/ca_4f68e148295c455db9e9499df078b062
+    uri: https://api.easypost.com/v2/carrier_accounts/ca_a61e2208f02e43da81813b743e1beac8
   response:
     body:
       string: '{}'
@@ -196,26 +194,27 @@ interactions:
       - chunked
       x-backend:
       - easypost
+      x-canary:
+      - direct
       x-content-type-options:
       - nosniff
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 9f1b0cfb627af80cefb5a3580032527f
+      - 92f9584062911dfbef9b192a0002d4c3
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb5nuq
+      - bigweb7nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb2nuq fde591f008
-      - intlb1wdc fde591f008
-      - extlb3wdc c51cdb8bf2
+      - intlb1nuq 570dfcbc0a
+      - extlb2nuq fc4d5d217f
       x-runtime:
-      - '0.117769'
+      - '0.117682'
       x-version-label:
-      - easypost-202205100008-b4df6b5700-master
+      - easypost-202205262146-0562c799aa-master
       x-xss-protection:
       - 1; mode=block
     status:
