--- a/tests/cassettes/test_user_update.yaml
+++ b/tests/cassettes/test_user_update.yaml
@@ -9,31 +9,31 @@ interactions:
       Connection:
       - keep-alive
       authorization:
-      - REDACTED
+      - <REDACTED>
       user-agent:
-      - REDACTED
+      - <REDACTED>
       x-client-user-agent:
-      - REDACTED
+      - <REDACTED>
     method: GET
     uri: https://api.easypost.com/v2/users
   response:
     body:
-      string: '{"id": "user_54356a6b96c940d8913961a3c7b909f2", "object": "User", "parent_id":
-        null, "name": "EasyPost Python Client Library Tests", "phone_number": "REDACTED",
-        "verified": true, "created_at": "2017-03-01T03:01:34Z", "balance": "0.00000",
-        "price_per_shipment": "0.00000", "recharge_amount": null, "secondary_recharge_amount":
-        null, "recharge_threshold": null, "has_billing_method": null, "cc_fee_rate":
-        "0.03", "default_insurance_amount": null, "insurance_fee_rate": "0.01", "insurance_fee_minimum":
-        "1.00", "email": "REDACTED", "children": ["REDACTED"]}'
+      string: '{"id": "user_2cfd34d1261a4a9b93d56c313a9a824b", "object": "User", "parent_id":
+        null, "name": "Ryan Nguyen", "phone_number": "<REDACTED>", "verified": true,
+        "created_at": "2022-05-23T17:43:47Z", "balance": "0.00000", "price_per_shipment":
+        "0.00000", "recharge_amount": null, "secondary_recharge_amount": null, "recharge_threshold":
+        null, "has_billing_method": null, "cc_fee_rate": "0.0325", "default_insurance_amount":
+        "50.00", "insurance_fee_rate": "0.005", "insurance_fee_minimum": "0.25", "email":
+        "<REDACTED>", "children": "<REDACTED>"}'
     headers:
       cache-control:
       - no-cache, no-store
       content-length:
-      - '8070'
+      - '502'
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"b0fa578474b6326fde45bf6b1b04aa68"
+      - W/"e67cce23fee900986d910af43877bdf2"
       expires:
       - '0'
       pragma:
@@ -51,21 +51,21 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 7cc43dc1627aca08efb5854d00148834
+      - aefe80c762911dfcef9b192b0002b470
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb6nuq
+      - bigweb3nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb2nuq fde591f008
-      - intlb2wdc fde591f008
-      - extlb1wdc c51cdb8bf2
+      - intlb2nuq 570dfcbc0a
+      - intlb1wdc 570dfcbc0a
+      - extlb1wdc fc4d5d217f
       x-runtime:
-      - '0.355213'
+      - '0.033866'
       x-version-label:
-      - easypost-202205100008-b4df6b5700-master
+      - easypost-202205262146-0562c799aa-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -85,31 +85,31 @@ interactions:
       Content-Type:
       - application/json
       authorization:
-      - REDACTED
+      - <REDACTED>
       user-agent:
-      - REDACTED
+      - <REDACTED>
       x-client-user-agent:
-      - REDACTED
-    method: PUT
-    uri: https://api.easypost.com/v2/users/user_54356a6b96c940d8913961a3c7b909f2
+      - <REDACTED>
+    method: PATCH
+    uri: https://api.easypost.com/v2/users/user_2cfd34d1261a4a9b93d56c313a9a824b
   response:
     body:
-      string: '{"id": "user_54356a6b96c940d8913961a3c7b909f2", "object": "User", "parent_id":
-        null, "name": "EasyPost Python Client Library Tests", "phone_number": "REDACTED",
-        "verified": true, "created_at": "2017-03-01T03:01:34Z", "balance": "0.00000",
-        "price_per_shipment": "0.00000", "recharge_amount": null, "secondary_recharge_amount":
-        null, "recharge_threshold": null, "has_billing_method": null, "cc_fee_rate":
-        "0.03", "default_insurance_amount": null, "insurance_fee_rate": "0.01", "insurance_fee_minimum":
-        "1.00", "email": "REDACTED", "children": ["REDACTED"]}'
+      string: '{"id": "user_2cfd34d1261a4a9b93d56c313a9a824b", "object": "User", "parent_id":
+        null, "name": "Ryan Nguyen", "phone_number": "<REDACTED>", "verified": true,
+        "created_at": "2022-05-23T17:43:47Z", "balance": "0.00000", "price_per_shipment":
+        "0.00000", "recharge_amount": null, "secondary_recharge_amount": null, "recharge_threshold":
+        null, "has_billing_method": null, "cc_fee_rate": "0.0325", "default_insurance_amount":
+        "50.00", "insurance_fee_rate": "0.005", "insurance_fee_minimum": "0.25", "email":
+        "<REDACTED>", "children": "<REDACTED>"}'
     headers:
       cache-control:
       - no-cache, no-store
       content-length:
-      - '8070'
+      - '502'
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"b0fa578474b6326fde45bf6b1b04aa68"
+      - W/"e67cce23fee900986d910af43877bdf2"
       expires:
       - '0'
       pragma:
@@ -127,21 +127,21 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 7cc43dc1627aca08efb5854d00148862
+      - aefe80c762911dfcef9b192b0002b484
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb4nuq
+      - bigweb5nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq fde591f008
-      - intlb1wdc fde591f008
-      - extlb1wdc c51cdb8bf2
+      - intlb2nuq 570dfcbc0a
+      - intlb1wdc 570dfcbc0a
+      - extlb1wdc fc4d5d217f
       x-runtime:
-      - '0.425732'
+      - '0.036834'
       x-version-label:
-      - easypost-202205100008-b4df6b5700-master
+      - easypost-202205262146-0562c799aa-master
       x-xss-protection:
       - 1; mode=block
     status:
